--- a/index.html
+++ b/index.html
@@ -3,34 +3,117 @@
 <head>
   <meta charset="utf-8">
   <title>Client-side Google Calendar API demo</title>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bower_components/bootstrap-calendar/css/calendar.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-This page tests the usability of Google Calendar as a data source.
+<h1>Wedding calendar</h1>
+<h3>This page tests the usability of Google Calendar as a data source.</h3>
+<label>Data is acquired from the following Google calendars:</label>
+<div ng-repeat="cal in calendars">
+<a href="https://calendar.google.com/calendar/embed?src={{cal.calendarId}}&ctz=America/New_York">{{cal.name}}</a><br>
+</div>
 <div>
   <div>
-    <select ng-model="calendar" ng-options="option.name for option in calendars" ng-change="loadEvents()"></select>
     {{calendarId}}
-    <div ng-hide="fetchSucceeded">
-      Error fetching data.
-      <button ng-click="loadEvents()">Try again</button>
+    <div>
+      <label ng-test="alertLabel" ng-hide="fetchSucceeded">Fetching data...</label> 
+      <button ng-click="loadEvents()">Refresh</button>
     </div>
   </div>
-
-  <ul>
-    <li ng-repeat="item in calendarItems" title="{{item}}">
-      {{item.summary}}
-      <ul>
-        <li>Date: {{item.start.date || item.start.dateTime | date}}</li>
-        <li>Location: {{item.organizer.displayName}}</li>
-      </ul>
-    </li>
-  </ul>
 </div>
 
-<script src="vendor/angular.js"></script>
+<div class="page-header">
 
-<script src="src/angular-googleapi.js"></script>
+    <div class="pull-right form-inline">
+      <div class="btn-group">
+        <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
+        <button class="btn" data-calendar-nav="today">Today</button>
+        <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
+      </div>
+      <div class="btn-group">
+        <button class="btn btn-warning" data-calendar-view="year">Year</button>
+        <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+        <button class="btn btn-warning" data-calendar-view="week">Week</button>
+        <button class="btn btn-warning" data-calendar-view="day">Day</button>
+      </div>
+    </div>
+
+    <h3>Month</h3>
+  </div>
+
+<!-- Calendar -->
+<div id="calendar"></div>
+
+<!-- List -->
+<br>
+<a ng-click="show_list=!show_list">Show/hide list</a>
+<ul ng-show="show_list">
+  <li ng-repeat="item in calendarItems" title="{{item}}">
+    {{item.title}}
+    <ul>
+      <li>Date: {{item.start | date}}</li>
+      <li>Location: {{item.organizer.displayName}}</li>
+    </ul>
+  </li>
+</ul>
+
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/underscore/underscore.js"></script>
+<script src="bower_components/bootstrap-calendar/js/calendar.js"></script>
+<script src="vendor/angular.js"></script>
+<script src="js/angular-googleapi.js"></script>
 <script src="controllers.js"></script>
 <script src="https://apis.google.com/js/client.js"></script>
+<script type="text/javascript">
+window.addEventListener('googleCalendar:loaded', function(){
+        var calendar = $("#calendar").calendar(
+            {
+                tmpl_path: "tmpls/",
+                events_source: function(){return window.calendarItems;},
+                events_cache: false,
+                onAfterEventsLoad: function(events) {
+                  if(!events) {
+                    return;
+                  }
+                  var list = $('#eventlist');
+                  list.html('');
+
+                  $.each(events, function(key, val) {
+                    $(document.createElement('li'))
+                      .html('<a href="' + val.url + '">' + val.title + '</a>')
+                      .appendTo(list);
+                  });
+                },
+                onAfterViewLoad: function(view) {
+                  $('.page-header h3').text(this.getTitle());
+                  $('.btn-group button').removeClass('active');
+                  $('button[data-calendar-view="' + view + '"]').addClass('active');
+                },
+                classes: {
+                  months: {
+                    general: 'label'
+                  }
+                }
+            });
+
+          $('.btn-group button[data-calendar-nav]').each(function() {
+            var $this = $(this);
+            $this.click(function() {
+              calendar.navigate($this.data('calendar-nav'));
+            });
+          });
+
+          $('.btn-group button[data-calendar-view]').each(function() {
+            var $this = $(this);
+            $this.click(function() {
+              calendar.view($this.data('calendar-view'));
+            });
+          });
+  });
+    </script>
 </body>
 </html>
